--- a/src/template/components/_prices.pug
+++ b/src/template/components/_prices.pug
@@ -17,7 +17,7 @@ mixin prices()
                     .card-bottom
                         span.price 0 &#8381;
                         span.duration мес/пользователь
-                        button.choose.js-open-p(data-open="choose-tariff") Выбрать
+                        button.choose Выбрать
                 .prices-card
                     .card-top
                         h3 Стандарт
@@ -33,7 +33,7 @@ mixin prices()
                     .card-bottom
                         span.price 100 &#8381;
                         span.duration мес/пользователь
-                        button.choose.js-open-p(data-open="choose-tariff") Выбрать
+                        button.choose Выбрать
                 .prices-card
                     .card-top
                         h3 Премиум
@@ -54,7 +54,7 @@ mixin prices()
                     .card-bottom
                         span.price 175 &#8381;
                         span.duration мес/пользователь
-                        button.choose.js-open-p(data-open="choose-tariff") Выбрать
+                        button.choose Выбрать
             p.gray-text * возможно заключение договора с юридическим лицом.
         .prices-bg
             svg(version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 1080" style="enable-background:new 0 0 1920 1080;" xml:space="preserve")
