--- a/src/template/partials/_media-tags.pug
+++ b/src/template/partials/_media-tags.pug
@@ -1,19 +1,19 @@
 //- Description no longer than 155 characters
-meta(name="description" content="Page description")
+meta(name="description" content="Сервис для обработки документов Росреестра в формате XML. На RRDoc можно храненить любое количество ваших документов, а также выполнять конвертацию выписок ЕГРН, КПТ, межевых планов и других документов из XML формата в человеко-читаемый вид в формате PDF или форматы популярных геоинформационных систем.")
 //-Twitter Card data
 meta(name="twitter:card" content="summary")
 meta(name="twitter:site" content="@publisher_handle")
-meta(name="twitter:title" content="Page Title")
-meta(name="twitter:description" content="Page description less than 200 characters")
-meta(name="twitter:creator" content="@author_handle")
+meta(name="twitter:title" content="Заказать кпт в электронном виде росреестр")
+meta(name="twitter:description" content="Сервис для обработки сведений кадастра недвижимости - электронных документов Росреестра в формате XML. RRDoc предоставляет возможность организовать хранение любого количества ваших документов, а также выполнять конвертацию выписок ЕГРН, КПТ, межевых планов и других документов из XML формата в человеко-читаемый вид в формате PDF, в форматы популярных геоинформационных систем.")
+meta(name="twitter:creator" content="it-thematic")
 //- Twitter Summary card images must be at least 120x120px
 meta(name="twitter:image" content="http://www.example.com/image.jpg")
 
 //-Open Graph data
-meta(property="og:title" content="Title Here")
+meta(property="og:title" content="Заказать кпт в электронном виде росреестр")
 meta(property="og:type" content="article")
 meta(property="og:url" content="http://www.example.com/")
 meta(property="og:image" content="http://example.com/image.jpg")
-meta(property="og:description" content="Description Here" )
-meta(property="og:site_name" content="Site Name, i.e. Moz")
+meta(property="og:description" content="Сервис для обработки сведений кадастра недвижимости - электронных документов Росреестра в формате XML. RRDoc предоставляет возможность организовать хранение любого количества ваших документов, а также выполнять конвертацию выписок ЕГРН, КПТ, межевых планов и других документов из XML формата в человеко-читаемый вид в формате PDF, в форматы популярных геоинформационных систем." )
+meta(property="og:site_name" content="RRDoc")
 meta(property="fb:admins" content="Facebook numeric ID")
