--- a/src/template/components/_intro.pug
+++ b/src/template/components/_intro.pug
@@ -4,7 +4,7 @@ mixin intro()
         .intro-text
           h1 Ваше решение по обработке 
             | сведений кадастра недвижимости
-          a(href="https://rrdoc.ru/") Попробовать
+          a(href="https://rrdoc.ru/login") Войти
         .intro-image
           img(src="./static/img/intro.png", alt="Intro image")
       .intro-bg
